Fixed spacing on items and alignment of header and navbar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,10 @@
     --lightest-color: #ebebeb;
     --light-color: #afafaf;
     --middle-color: #808080bf;
-    --dark-color: #2e2e2e55;
+    --dark-color: #2e2d2d;
     --darkest-color: #161616;
     --temp-border-viewer: 1px solid white;
-    --font:
+    --font: 'Franklin Gothic Medium'
 }
 
 body {
@@ -19,46 +19,74 @@ body {
     flex-direction: column;
     align-content: center;
     /* Puts flex direction to a column. */
+    margin: auto;
+    /* Centers our body with margin. Bad? */
+
+    /* Width and Height controls */
+    height: 92.25%;
+    width: 95%;
 
     /* Border + Background Controls */
-    background-color: var(--darkest-color);
+
+    background: radial-gradient(var(--dark-color), var(--darkest-color));
     border: 1px solid pink;
-    height: 90%;
-    width: 90%;
+
+
+    padding: 2.5%;
 }
 
-h1 {
-    /* border: var(--temp-border-viewer); */
-    color: var(--lightest-color);
-    font-family: 'Franklin Gothic Medium';
-    font-size: xx-large;
-    padding: 5%;
+.main-container {
+    display: flex;
+    justify-content: flex-start;
+    /* Puts body items to the top. */
+    align-items: center;
+    /* Aligns body items to the top center. */
+    flex-direction: column;
+    align-content: center;
+    /* Puts flex direction to a column. */
+    margin: 2.5%;
+    /* Centers our body with margin. Bad? */
+    /* Border + Background Controls */
+    /* GREEN CONTROLLER */
+    border: 1px solid green;
+
+    /* Width Controls */
+    width: 100%;
+    height: 100%;
 }
 
 header {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    /* flex-direction: row; */
+    justify-content: space-between;
+    /* Makes them spaced around*/
+    align-items: center;
+    /* Centers them in the space container */
+    width: 100%;
+    height: auto;
+
+    /* RED CONTROLLER */
     border: 1px solid red;
-    align-content: space-around;
+
+    padding: 2px;
+    max-height: 75px;
 }
+
+h1 {
+    /* YELLOW CONTROLLER */
+    border: 1px solid purple;
+    color: var(--lightest-color);
+    font-family: var(--font);
+    font-size: xx-large;
+}
+
+
 
 nav {
-    display: flex;
 
+    color: var(--lightest-color);
     width: auto;
     height: auto;
+    /* BLUE CONTROLLER */
     border: 1px solid blue;
-}
-
-.main-container {
-    /* Display Controls */
-    display: flex;
-    /* Border + Background Controls */
-    border: 1px solid green;
-    ;
-    background-color: var(--dark-color);
-    /* Width Controls */
-    width: 85%;
-    height: auto;
 }
